# flashcard-game

./: .ignore_words  Cargo.toml  README.md  translations.toml
dictionary/: N5_translations_furigana.toml  N5_transtlations.toml  hiragana.toml  hiragana_dakuten.toml  hiragana_handakuken.toml  jlpt_vocab.toml  jlpt_vocab_old.toml  translations.toml  translations_furigana.toml
src/: game_ui.rs  main.rs
