[package]
name = "flash_card_proto"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking", "bevy_dev_tools"] }
bevy-inspector-egui = "0.27.0"
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
rand = "0.8.5"
serde = "1.0.204"
toml = "0.8.19"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
